k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: nagp-2026
spec:
  type: ClusterIP
  selector:
    app: api
  ports:
    - name: http
      port: 80
      targetPort: 8000
